Add LeetCode #0721 - Accounts Merge